update to latest dependencies + fixes - Update Hikari to v7 - Fix update checker on MC 1.8 - Fix gems not saving correctly